# AgenticDJ

./: .env.example  .gitignore  ECHODJ_SPEC.md  README.md  graphrag_paper.txt
backend/: pyproject.toml
backend/echodj/: __init__.py  config.py  models.py  server.py  state.py
backend/echodj/graph/: __init__.py  broadcast.py  builder.py  curator.py  discoverer.py  historian.py  memory_manager.py  observer.py  scriptwriter.py  vocalizer.py
backend/echodj/llm/: __init__.py  gemini.py  ollama.py  openai_provider.py  provider.py
backend/echodj/services/: __init__.py  lastfm.py  listenbrainz.py  music_knowledge_graph.py  musicbrainz.py  segment_cache.py  spotify.py  tts.py  wikidata.py
backend/echodj/stt/: __init__.py  whisper.py
backend/tests/: conftest.py  test_llm_providers.py  test_models.py  test_music_kg.py  test_nodes.py  test_segment_cache.py  test_server_wiring.py  test_spec_compliance.py  test_spotify_service.py  test_state.py  test_tts_service.py
data/: echodj_music_kg.db-shm  echodj_music_kg.db-wal
docs/: API_KEYS_SETUP.md  DEVELOPMENT.md  SPEC_REVIEW_NOTES.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/pkce/: route.ts
frontend/src/app/callback/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: NowPlaying.tsx  PTTButton.tsx  ReasoningCard.tsx  StatusHUD.tsx  TriviaCard.tsx  Visualizer.tsx
frontend/src/hooks/: useAuth.ts  usePTT.ts  useSpotifyPlayer.ts  useWebSocket.ts
frontend/src/lib/: spotify-auth.ts  types.ts
(+1 files in other folders)
