[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echodj"
version = "0.1.0"
description = "Agentic AI radio station built on the Spotify ecosystem"
requires-python = ">=3.12"
dependencies = [
    # API server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # Agent orchestration
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langgraph-checkpoint-sqlite>=2.0",   # GAP 2: real SQLite checkpointer
    "aiosqlite>=0.20",                     # async SQLite driver

    # LLM providers
    "httpx>=0.27",                    # Async HTTP client (Gemini, Ollama, OpenAI)

    # Config
    "pydantic-settings>=2.3",

    # Text-to-speech
    "edge-tts>=7.0",

    # Speech-to-text
    "faster-whisper>=1.1",

    # Audio utilities
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["echodj"]
